--- a/src/Login/Components/LoginCart/LoginCart.css
+++ b/src/Login/Components/LoginCart/LoginCart.css
@@ -2,12 +2,15 @@
     display: flex;
     width: 60%;
     box-shadow: 0px 1px 4px 0.1px #5c5c5c7c;
-    height: 80%;
+    height: 85%;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.685);
 }
 
-@media (max-width:880px) {
+@media (max-width:900px) {
+    .card {
+        width: 90%;
+    }
     .card .card_picture {
         display: none;
     }
